--- a/run-creator/action.yml
+++ b/run-creator/action.yml
@@ -4,6 +4,9 @@ inputs:
   configFile:  
     description: 'The Creator Template yaml file'
     required: true
+  workingDirectory:
+    description: 'The working directory for the config file'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -11,5 +14,6 @@ runs:
       shell: bash
       run: |
         apim-templates create --configFile ${{inputs.configFile}}
+      working-directory: ${{input.workingDirectory}}
 
 
