--- a/run-extractor/action.yml
+++ b/run-extractor/action.yml
@@ -14,4 +14,4 @@ runs:
       shell: bash
       run: |
         apim-templates extract --extractorConfig ${{inputs.configFile}}
-      working-directory: ${{input.workingDirectory}}
+      working-directory: ${{inputs.workingDirectory}}
